# crm-prototype

./: .env.dist  .gitignore  Dockerfile  LICENSE  Makefile  README.md  createsuperuser.py  docker-compose.yml  main.py  nginx.conf  pyproject.toml
app/: create_superuser.py  security.py  utils.py
app/api/: dependencies.py  routers.py
app/api/actions/: auth.py  permissions.py  verification.py
app/api/management/: tasks.py
app/api/users/: admin.py  client.py  staff.py
app/core/: database.py  project_config.py
app/models/: base_model.py  development.py  enums.py  polling.py  users.py
app/repositories/: tasks_repository.py  users_repository.py
app/schemas/: admin_scheme.py  base_scheme.py  oauth_scheme.py  tasks_scheme.py  user_scheme.py
app/services/: task_service.py  user_service.py
celery_tasks/: background_actions.py  email_content_type.py  task_service.py  tasks.py
migrations/: env.py
migrations/versions/: 114fbce0e3b4_rel.py  c1691c31ff28_init.py
tests/: app_test.py  conftest.py  staff_test.py  user_test.py
